Correct spacing issues on media screens (actually just took a general margin rule in two areas, surprised it was that easy). Now it's perfect enough for me!

--- a/less/index.less
+++ b/less/index.less
@@ -84,6 +84,7 @@ a {
 
 #top {
 	.flex-styles();
+	margin-bottom: 40px;
 
 	h1 {
 		font-size: 3rem;
@@ -135,6 +136,7 @@ a {
 
 #middle {
 	.flex-styles();
+	margin-bottom: 40px;
 
 	#skills {
 		width: 60%;
